Updated build to use latest Mint release

--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.googlecode.redbox-mint</groupId>
     <artifactId>mint-nectar-local-curation</artifactId>
-    <version>1.5.1</version>
+    <version>1.5.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>The Mint - Nectar - Local Curation</name>
     <parent>
         <groupId>com.googlecode.redbox-mint</groupId>
         <artifactId>mint</artifactId>
-        <version>1.5.1</version>
+        <version>1.5.2.1</version>
     </parent>
     <properties>
         <!-- Used in build -->
-        <mint.version>1.5.1</mint.version>
+        <mint.version>1.5.2.1</mint.version>
 		<mint.location>/opt/mint</mint.location>
         <!-- Runtime values, will replace placeholders
              in config and control scripts -->
