--- a/pom.xml
+++ b/pom.xml
@@ -285,10 +285,10 @@
             </plugin>
         </plugins>
     </build>
-    <scm>
-        <url>https://redbox-mint.googlecode.com/svn/mint/builds/dev-local/trunk</url>
-        <connection>scm:svn:http://redbox-mint.googlecode.com/svn/mint/builds/dev-local/trunk</connection>
-        <developerConnection>scm:svn:https://redbox-mint.googlecode.com/svn/mint/builds/dev-local/trunk</developerConnection>
+     <scm>
+    	<url>https://github.com/redbox-mint/mint-build-nectar-local-curation</url>
+   		<developerConnection>scm:git:https://github.com/redbox-mint/mint-build-nectar-local-curation</developerConnection>
+   		<tag>HEAD</tag>
     </scm>
     <repositories>
         <repository>
